--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
   "name": "proyecto_portafolio",
   "version": "1.0.0",
-  "description": "Página web desarrollada pensando en Mobile First. Ejercicio desarrollado junto a las clases de Responsive design de Platzi (Febrero 2016) ",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Barís Klobertanz (klobertanz@gmail.com)",
-  "license": "BSD-2-Clause"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bklobertanz/proyecto-responsive.git"
+  },
+  "author": "Barís Klobertanz <klobetanz@gmail.com>",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/bklobertanz/proyecto-responsive/issues"
+  },
+  "devDependencies": {
+    "gulp": "~3.9.1",
+    "nib": "~1.1.0",
+    "gulp-stylus": "~2.3.0",
+    "gulp-webserver": "~0.9.1",
+    "gulp-minify-css": "~1.2.3",
+    "browserify": "~13.0.0",
+    "vinyl-source-stream": "~1.1.0",
+    "vinyl-buffer": "~1.0.0",
+    "gulp-uglify": "~1.5.3"
+  }
 }
