--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "browserify": "~13.0.0",
     "vinyl-source-stream": "~1.1.0",
     "vinyl-buffer": "~1.0.0",
-    "gulp-uglify": "~1.5.3"
+    "gulp-uglify": "~1.5.3",
+    "gulp-image-optimization": "~0.1.3",
+    "gulp-smoosher": "0.0.9"
   }
 }
